--- a/mysite/static/style.css
+++ b/mysite/static/style.css
@@ -1,3 +1,159 @@
-.sidebar {
+h1 {
+  color: rgb(255,255,255);
+  font-size: 100px;
+  font-variant: small-caps;
+  text-align: center;
   background-color: rgb(255,0,255);
+}
+
+p.display {
+  font-size: 20px;
+  position: absolute;
+  top: 250px;
+  left: 630px;
+}
+
+p.date_range {
+  font-size: 20px;
+  position: absolute;
+  top: 300px;
+  left: 600px;
+}
+
+p.range_word {
+  font-size: 20px;
+  position: absolute;
+  top: 330px;
+  left: 770px;
+}
+
+/* buttons */
+.switch {
+  position: absolute;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+
+.dropbtn {
+  background-color: #3498DB;
+  color: white;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 70px;
+  left: 700px;
+  width: 150px;
+  height: 40px;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 110px;
+  left: 700px;
+  background-color: #f1f1f1;
+  min-width: 150px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
+
+.homeSubmit {
+  position: absolute;
+  top: 420px;
+  left: 750px;
+}
+
+/* date */
+input.startDate {
+  display: block;
+  position: absolute;
+  top: 320px;
+  left: 708px;
+  width: 150px;
+}
+
+input.endDate {
+  display: block;
+  position: absolute;
+  top: 380px;
+  left: 708px;
+  width: 150px;
 }
