--- a/mysite/static/style.css
+++ b/mysite/static/style.css
@@ -1,9 +1,29 @@
-h1.title {
+h1.autoText {
   color: rgb(255,255,255);
   font-size: 100px;
   font-variant: small-caps;
   text-align: center;
   background-color: rgb(255,0,255);
+}
+
+h1.releaseText {
+  color: rgb(255,255,255);
+  font-size: 100px;
+  font-variant: small-caps;
+  text-align: center;
+  background-color: rgb(255,0,255);
+  position: relative;
+  top: 500px;
+}
+
+h1.bugText {
+  color: rgb(255,255,255);
+  font-size: 100px;
+  font-variant: small-caps;
+  text-align: center;
+  background-color: rgb(255,0,255);
+  position: relative;
+  top: 1000px;
 }
 
 p.display {
@@ -16,37 +36,57 @@ p.display {
 p.date_range {
   font-size: 20px;
   position: absolute;
-  top: 100px;
-  left: 900px;
+  top: 120px;
+  left: 1035px;
 }
 
 p.range_word {
   font-size: 20px;
   position: absolute;
-  top: 50px;
-  left: 900px;
+  top: 120px;
+  left: 1340px;
 }
 
 /* submit to diplay */
 .homeSubmit {
   position: absolute;
-  top: 420px;
-  left: 750px;
+  top: 142px;
+  left: 1515px;
 }
 
 /* date */
 input.startDate {
   display: block;
   position: absolute;
-  top: 320px;
-  left: 708px;
+  top: 140px;
+  left: 1185px;
   width: 150px;
 }
 
 input.endDate {
   display: block;
   position: absolute;
-  top: 380px;
-  left: 708px;
+  top: 140px;
+  left: 1360px;
   width: 150px;
+}
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: red; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
 }
